[package]
name = "rust-jsonsigned"
version = "0.1.0"
authors = ["Erik Johnston"]

[dependencies]
serde = "1.0.40"
serde_json = "1.0.15"
indolentjson = { git = "https://github.com/NegativeMjark/indolentjson-rust.git" }
sodiumoxide = {version = "0.0.16", features=["serde"]}
base64 = "0.9.0"
serde_derive = "1.0.40"
failure = "0.1.1"
